tests/snapshots/system_list_tests__list_no_config_fails.snap
---
source: tests/system_list_tests.rs
expression: normalized
---
✗ No configuration found. Run 'bivvy init' first.
