tests/snapshots/system_list_tests__list_single_step_config.snap
---
source: tests/system_list_tests.rs
expression: text
---
  Environment: development (--env flag)

  Steps:
    only — rustc --version
      Only step

  Workflows:
    default: only
