tests/snapshots/system_list_tests__list_workflows_only.snap
---
source: tests/system_list_tests.rs
expression: text
---
  Environment: development (--env flag)

  Workflows:
    default: deps → build → test
    quick: test
      Quick check
